--- a/ServiceTest02DownloadFile/res/values/strings.xml
+++ b/ServiceTest02DownloadFile/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Service Test 2</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="service_name">Download Service</string>
 
 </resources>
