Revise ActivityTest55 to test customized sign-in AlertDialog

--- a/ActivityTest55DialogFrag/app/src/main/res/values/strings.xml
+++ b/ActivityTest55DialogFrag/app/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
         <item>Lettuce</item>
         <item>Tomato</item>
     </string-array>
+    
+    <!-- Sign-in dialog -->
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="signin">Sign in</string>
+
 </resources>
