--- a/Bagilevi-Pedometer/app/src/main/res/values-zh/strings.xml
+++ b/Bagilevi-Pedometer/app/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">计步器</string>
+    <string name="app_name">计步器</string>
     <string name="notification_subtitle">开始计步</string>
 
     <string name="started">计步器启动</string>
