--- a/AT74ScheduleRepeatAlarm/app/src/main/res/values/strings.xml
+++ b/AT74ScheduleRepeatAlarm/app/src/main/res/values/strings.xml
@@ -8,13 +8,14 @@
         the Google home page for a custom doodle once a day. If the app finds a doodle,
         it posts a \"Doodle Alert\" as a notification. Click CANCEL ALARM to cancel the
         alarm. Once the alarm is active, it automatically restarts when the device is
-        rebooted.</string>
+        rebooted. Since Google is not accessible in China, we changed the connection to Baidu.com.
+    </string>
     <string name="start_text">Start Alarm</string>
     <string name="cancel_text">Cancel Alarm</string>
     <string name="start_wakeful_service">Start Wakeful</string>
     <string name="doodle_alert">Doodle Alert</string>
-    <string name="doodle_found">There is a Google doodle today!!</string>
-    <string name="no_doodle">No Google doodle today.</string>
+    <string name="doodle_found">There is a Baidu 新闻 today!!</string>
+    <string name="no_doodle">No Baidu 新闻 today.</string>
     <string name="connection_error">Connection error.</string>
     <string name="action_settings">Settings</string>
 </resources>
