Update BT12StaggeredGrid by finishing empty view, listview etc.

--- a/BT12StaggeredGrid/app/src/main/res/values/strings.xml
+++ b/BT12StaggeredGrid/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_activity_staggered_grid">StaggeredGridActivity</string>
     <string name="title_activity_staggered_grid_activity_fragment">StaggeredGridActivityFragment
     </string>
+    <string name="title_activity_list_view">ListViewActivity</string>
+    <string name="title_activity_staggered_grid_empty_view">StaggeredGridEmptyViewActivity</string>
 </resources>
