--- a/BT10iBeaconTxRx/app/src/main/res/values/strings.xml
+++ b/BT10iBeaconTxRx/app/src/main/res/values/strings.xml
@@ -6,10 +6,22 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="under_construction">Under construction ..</string>
 
     <!-- for LDrawer -->
     <string name="drawer_open">drawer_open</string>
     <string name="drawer_close">drawer_close</string>
+    <string-array name="menu_list_items">
+        <item>Beacon Receiver</item>
+        <item>Beacon Transmitter</item>
+        <item>WiFi Receiver</item>
+        <item>WiFi Transmitter</item>
+        <item>0. Fingerprint Marker</item>
+        <item>1. Find Landmark</item>
+        <item>2. Find D Landmark</item>
+        <item>3. Find Fingerprint</item>
+        <item>Exit</item>
+    </string-array>
 
     <!-- wifi strings -->
     <string name="wifi_default_wifi_ssid">NoName</string>
